--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,59 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  background-color: var(--bg-color);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+main {
+  display: flex;
+  align-items: stretch;
+  height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.avatar {
+  border-radius: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.icon {
+  padding: 8px;
+  cursor: pointer;
+  filter: invert(79%) sepia(18%) saturate(148%) hue-rotate(158deg)
+    brightness(91%) contrast(88%);
 }
 
-.card {
-  padding: 2em;
+.pin {
+  filter: invert(79%) sepia(18%) saturate(148%) hue-rotate(158deg)
+    brightness(91%) contrast(88%);
 }
 
-.read-the-docs {
-  color: #888;
+.hidden {
+  display: none !important;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  padding: 10px 0px;
+  width: 195px;
+  background-color: var(--dropdown-color);
+  z-index: 10;
+  border-radius: 3px;
+  /* display: flex; */
+  flex-direction: column;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-content a {
+  padding: 10px 16px;
+  color: var(--text-primary);
+}
+
+.dropdown-content a:hover {
+  background-color: var(--bg-color);
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
 }
