--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,92 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --bg-color: #111b21;
+  --color-1: #06cf9c;
+  --color-1: #53bdeb;
+  --color-1: #00a884;
+  --green: #005c4b;
+  --green-secondary: #025144;
+  --light-grey: #2a3942;
+  --primary: #202c33;
+  --color-1: #1d282f;
+  --bg-color-secondary: #182229;
+  --color-1: #111b21;
+  --color-1: #101a20;
+  --color-1: #0b141a;
+  --color-1: #0b141a59;
+  --color-1: #000000b3;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --text-primary: #d1d7db;
+  --text-primary-strong: #e9edef;
+  --text-secondary: #8696a0;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --search-input-background: var(--primary);
+  --border-color: var(--light-grey);
+  --compose-bg-color: var(--light-grey);
+  --input-placeholder-color: var(--text-secondary);
+  --dropdown-color: var(--primary);
+
+  --border-radius: 0.5rem;
+  --header-height: 59px;
+  --footer-height: 62px;
+  --searchbar-border-radius: var(--border-radius);
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary);
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* border: solid 0.2px pink; */
+}
+
+html,
+body {
+  font-family: "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial,
+    Ubuntu, "Cantarell", "Fira Sans", sans-serif;
+  font-size: 14px;
+  height: 100%;
+}
+
+input[type="search"] {
+  border: none;
+  outline: none;
+  flex-grow: 1;
+  color: var(--text-primary);
+  background-color: var(--primary);
+  border-radius: var(--searchbar-border-radius);
+}
+
+input[type="search"]::-webkit-input-placeholder,
+input[type="search"]::placeholder {
+  color: var(--input-placeholder-color);
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  /* Remove default */
+  -webkit-appearance: none;
+
+  height: 10px;
+  width: 10px;
+  background: red;
+  cursor: pointer;
+}
+
+ul > li {
+  list-style: none;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  text-decoration: none;
+  color: inherit;
 }
