--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body {
     Ubuntu, "Cantarell", "Fira Sans", sans-serif;
   font-size: 14px;
   height: 100%;
+  color: var(--text-primary);
 }
 
 input[type="search"] {
